--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,13 +1,24 @@
 -#  This file is app/views/movies/index.html.haml
 %h2 All Movies
 
+= form_tag movies_path, :method => :get do
+  Include:
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]"
+  = submit_tag 'Refresh', :class => 'btn btn-primary'
+  
 %table#movies.table.table-striped.col-md-12
   %thead
     %tr
-      %th Movie Title
+      %th{:class => ("hilite" if params[:sort] == 'title')}= link_to "Movie Title", movies_path(sort: 'title'), id: 'title_header'
+      
       %th Rating
-      %th Release Date
+      
+      %th{:class => ("hilite" if params[:sort] == 'release_date')}= link_to "Release Date", movies_path(sort: 'release_date'), id: 'release_date_header'
+
       %th More Info
+      
   %tbody
     - @movies.each do |movie|
       %tr
